# BoxcLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.sh
src/codegen/: arrays_and_dicts.cpp  box_value.cpp  box_value.hpp  builtin_functions.cpp  codegen.cpp  codegen.hpp  codegen_error.cpp  codegen_error.hpp  dict_operations.cpp  environment.cpp  environment.hpp  expression_visitors.cpp  llvm_inline.cpp  statement_visitors.cpp  utility_functions.cpp  visit_call.cpp  visit_switch.cpp
src/compiler/: compiler.cpp  compiler.hpp  file_resolver.cpp  file_resolver.hpp  main.cpp
src/lexer/: lexer.cpp  lexer.hpp  lexer_error.cpp  lexer_error.hpp  token.cpp  token.hpp
src/memory_analyzer/: memory_analyzer.cpp  memory_analyzer.hpp
src/optimizer/: optimizer.cpp  optimizer.hpp
src/parser/: parser.cpp  parser.hpp
tests/codegen/: codegen_test.cpp
tests/compiler/: compiler_test.cpp
tests/integration/import_tests/: advanced_math.box  circular_a.box  circular_b.box  main_circular.box  main_multiple  main_multiple.box  main_nested  main_nested.box  main_simple  main_simple.box  math_utils.box  string_utils.box
tests/lexer/: lexer_test.cpp
tests/memory_analyzer/: memory_analyzer_graph_test.cpp  memory_analyzer_test.cpp
tests/optimizer/: optimizer_test.cpp
tests/parser/: parser_test.cpp
